<resources>
    <string name="app_name">Login UI</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="clear">Clear Form</string>
    <string name="log_out">Log out</string>
    <string name="welcome_back">"Welcome back: "</string>
    <string name="app_icon">App Icon</string>
    <string name="exit">Exit</string>
</resources>
